fix display of standard notes and the width/alignment of the edit button - scale down the font size of link entries

--- a/src/components/Day/Day.scss
+++ b/src/components/Day/Day.scss
@@ -36,7 +36,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    gap: var(--s2);
+    gap: var(--s0);
   }
 
   .title {
